--- a/wedding.html
+++ b/wedding.html
@@ -30,9 +30,9 @@
               <ul class="menu">
                 <li><a href="index.html">About</a></li>
                 <li><a class="active" href="wedding.html">Wedding</a></li>
-<!--                <li><a href="album.html">Album</a></li>
-                <li><a href="links.html">Links</a></li>-->
-                <li><a href="contacts.html">Contacts</a></li>
+               <!-- <li><a href="album.html">Album</a></li>-->
+               <!-- <li><a href="links.html">Links</a></li>-->
+               <!-- <li><a href="contacts.html">Contacts</a></li>-->
               </ul>
             </nav>
           </div>
