--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a class="active" href="index.html">About</a></li>
                 <li><a href="wedding.html">Wedding</a></li>
       <!--          <li><a href="album.html">Album</a></li>-->
-                <li><a href="contacts.html">Contacts</a></li>
+               <!-- <li><a href="contacts.html">Contacts</a></li>-->
               </ul>
             </nav>
           </div>
