--- a/wedding.html
+++ b/wedding.html
@@ -13,6 +13,7 @@
 <link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Bilbo Swash Caps' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Condiment' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Allan' rel='stylesheet'>
 <!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
 </head>
 <body id="page2">
@@ -58,7 +59,7 @@
             </blockquote>
             <p class="p2 centeralign">Reception is on </p>
             <p class="img-indent-bot"></p>
-              <p class="italics"> 28th November 2017 7 PM Onwards </p>
+              <p class="italics"> 28th November 2017 <br />7 PM Onwards </p>
               <p class="italics"> MLC Raghavendra Kalyana Mandapam </p>
                <p class="italics">Srinivasa Mangapuram Rd, Chandragiri, Andhra Pradesh 517101</p>
             <!--<a class="link-1" href="#">Read More</a>---> </div>
