--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="quote-top">
                       <div class="quote">
                         <div class="padding">
-                          <h4 class="p2 fntsize">Poojitha MadiReddy.M.Tech.,</h4>
+                          <h4 class="p2 fntsize">Pujitha MadiReddy.M.Tech.,</h4>
                             <p> Daugther of <b>Mr.</b> M. BaliReddy & <b>Mrs.</b> N.ArunaKumari </p>
                         </div>
                       </div>
@@ -104,7 +104,7 @@
                       <div class="quote">
                         <div class="padding">
                           <h4 class="p2 fntsize">Deepak Elavarthi, C.M.A, C.A. </h4>
-                            <p> Son of <b>Mr.</b>E. Chandra Mauley & <b>Mrs.</b> D. Sumathi </p> </div>
+                            <p> Son of <b>Mr.</b>E. Chandra Mouli & <b>Mrs.</b> D. Sumathi </p> </div>
                       </div>
                     </div>
                   </div>
