--- a/wedding.html
+++ b/wedding.html
@@ -14,6 +14,7 @@
 <link href='https://fonts.googleapis.com/css?family=Bilbo Swash Caps' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Condiment' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Allan' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Bilbo Swash Caps' rel='stylesheet'>
 <!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
 </head>
 <body id="page2">
@@ -57,7 +58,8 @@
             <blockquote class="q3">
               <div class="padding"> Love is the greatest gift when given. It is the highest honor when received.</div>
             </blockquote>
-            <p class="p2 centeralign">Reception is on </p>
+            <p class="p2 centeralign">Reception </p>
+              <p class="centeralign">On </p>
             <p class="img-indent-bot"></p>
               <p class="italics"> 28th November 2017 <br />7 PM Onwards </p>
               <p class="italics"> MLC Raghavendra Kalyana Mandapam </p>
@@ -67,14 +69,14 @@
         <article class="grid_8">
           <div class="indent-left">
             <h2>Wedding Ceremony</h2>
-            <p class="img-indent-bot fntfamily">We Cordially Solicit your gracious presence with family & friends on the auspicious marriage occasion of our marriage ceremony.</p>
+            <p class="img-indent-bot fntfamily">We Cordially Solicit your gracious presence with family & friends on the auspicious occasion of our Wedding.</p>
             <div class="wrapper indent-bot">
               <figure class="img-indent2 img-border1"><img src="images/page2-img2.jpg" alt=""></figure>
               <div class="extra-wrap indent-top"> <em class="color-2">A great marriage is not when the "perfect couple" comes together. It is when an imperfect couple learns to enjoy their differences.</em> </div>
             </div>
-            <p class="img-indent-bot centeralign">Sumuhurtham</p>
+            <p class="img-indent-bot centeralignsum ">Sumuhurtham</p>
               <p class="centeralign">On </p>
-              <p class="italics"> 29th November 2017 between 4 Am - 5 Am </p>
+              <p class="italics"> 29th November 2017 between 4 AM - 5 AM </p>
               <p class="italics"> MLC Raghavendra Kalyana Mandapam </p>
                <p class="italics">Srinivasa Mangapuram Rd, Chandragiri, Andhra Pradesh 517101</p>
            <!-- <div class="wrapper p3">
