--- a/wedding.html
+++ b/wedding.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Deepu Pojji | Wedding</title>
+<title>Deepu pujji | Wedding</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
@@ -21,7 +21,7 @@
 <!--==============================header=================================-->
 <header>
   <div class="main">
-    <h1> <a href="index.html">DeepuPojji</a> <em><b>Our wedding Page</b></em> </h1>
+    <h1> <a href="index.html">DeepuPujji</a> <em><b>Our wedding Page</b></em> </h1>
   </div>
   <div class="menu-row">
     <div class="main">
